--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -10,7 +10,7 @@
             <p>{{dob | date}}</p><br>
             <label>Education</label>
             <p>{{edu}}</p><br>
-            <label>work</label>
+            <label>Work</label>
             <p>{{exp}}</p>
             <div class="btn">
                 <button mat-raised-button color="primary" (click)="goEdit()">Edit Profile</button>
